# torvi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  Rocket.toml  docker-compose.yml
dev/: landing-page-plan.md  run-all.sh  start-dev.sh  stop-dev.sh
src/: error.rs  main.rs  spa.rs
src/common/: guards.rs  json.rs  mod.rs  pagination.rs
src/common/tests/: guards_tests.rs  mod.rs
src/config/: azure.rs  cors.rs  database.rs  docs.rs  indices.rs  jwt.rs  logging.rs  mod.rs  request_id.rs  s3.rs  security.rs  services.rs
src/config/tests/: azure_tests.rs  cors_tests.rs  database_tests.rs  jwt_tests.rs  logging_tests.rs  mod.rs  request_id_tests.rs  s3_tests.rs  security_tests.rs
src/modules/: mod.rs
src/modules/auth/: controller.rs  model.rs  service.rs
src/modules/health/: controller.rs  mod.rs
src/modules/images/: controller.rs  model.rs  repository.rs  service.rs
src/modules/opponents/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/tournaments/: controller.rs  model.rs  repository.rs  service.rs
src/modules/users/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/websocket/: broadcaster.rs  controller.rs  mod.rs  model.rs
web/: package-lock.json  package.json
web/app/: CLAUDE.md  index.html  package.json  tsconfig.json
web/app/src/: App.test.tsx  App.tsx  main.tsx
web/landing/: next.config.ts  package.json  proxy.ts  vitest.config.ts
web/landing/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
web/landing/components/: BracketVisual.test.tsx  BracketVisual.tsx  Features.test.tsx  Features.tsx  Footer.test.tsx  (+9 more)
(+150 files in other folders)
