[package]
name = "torvi"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mongodb = { version = "3.1.1", default-features = true }
bson = "3.0.0"
ws = { package = "rocket_ws", version = "0.1.1" }
bcrypt = "0.16"
serde = { version = "1.0.216", features = ["derive"] }
async-trait = "0.1.83"
uuid = "1.11.0"
image = "0.25.5"
webp = "0.3.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_core = "0.21.0"
tokio = { version = "1.42.0", features = ["full", "test-util"] }
features = "0.10.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
mockall = "0.13.1"
serde_json = "1.0.134"
