[package]
name = "torvi"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mongodb = { version = "3.1.1", default-features = true }
bson = "3.0.0"
ws = { package = "rocket_ws", version = "0.1.1" }
bcrypt = "0.16"
serde = { version = "1.0.216", features = ["derive"] }
async-trait = "0.1.83"
uuid = { version = "1.11.0", features = ["v4"] }
image = "0.25.5"
webp = "0.3.0"
aws-sdk-s3 = "1.65.0"
aws-config = "1.5.12"
aws-credential-types = "1.2.1"
tokio = { version = "1.42.0", features = ["full", "test-util"] }
dotenvy = "0.15"
futures = "0.3"
jsonwebtoken = "9.3.0"
serde_json = "1.0.134"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
rocket_cors = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
mockall = "0.13.1"
serial_test = "3.2"
